@@ -17,9 +17,12 @@ $Id$"""
 # the tarballs and RPMs made by distutils, so it's best to lowercase it.
 name = 'ipython'
 
-# For versions with substrings (like 0.6.7_rc1), use _ but NOT -, since
-# bdist_rpm chokes on dashes in the version string.
-version = '0.6.16_svn'
+# For versions with substrings (like 0.6.16.svn), use an extra . to separate
+# the new substring.  We have to avoid using either dashes or underscores,
+# because bdist_rpm does not accept dashes (an RPM) convention, and
+# bdist_deb does not accept underscores (a Debian convention).
+
+version = '0.6.16.svn'
 
 description = "An enhanced interactive Python shell."
 
